# torchquant

./: .gitignore  .pre-commit-config.yaml  .~lock.x.odt#  README.md  pyproject.toml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml
examples/: demo_cv_resnet.py  demo_llm_qwen.py
models/: smp_model.py
src/torchquant/: __init__.py  _types.py  calibration.py  config.py  graph.py  pipeline.py  registry.py  rules.py
src/torchquant/adapters/: __init__.py  generic.py  genericx.py  llm.py  smp.py
src/torchquant/export/: __init__.py  _recover.py  pt2e.py  rewriter.py
src/torchquant/export/rewriters/: __init__.py  conv.py  embedding.py  linear.py
src/torchquant/export/runtime/: __init__.py  base.py  conv.py  embedding.py  linear.py
src/torchquant/observers/: __init__.py  awq.py  hessian.py  minmax.py  smoothquant.py
src/torchquant/quantizers/: __init__.py  _fake_quant.py  _oracle.py  awq.py  gptq.py  rtn.py  smoothquant.py
tests/: _quantized_module_fixtures.py  _rewriter_fixtures.py  test_adapters_dispatch.py  test_build_quantized_model.py  test_export_pt2e.py  test_export_recover.py  test_graph.py  test_pipeline.py  test_quantized_modules.py  test_quantizers_awq.py  test_quantizers_gptq.py  test_quantizers_rtn.py  test_quantizers_smoothquant.py  test_registry.py  test_rewriter_registry.py  test_rewriters_conv.py  test_rewriters_embedding.py  test_rewriters_linear.py  test_rules.py  test_smoke.py
