[project]
name = "torchquant"
version = "0.1.0"
description = "A universal PyTorch model quantization toolkit"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pydantic>=2.12.5",
    "torch>=2.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
smp = ["segmentation-models-pytorch>=0.3"]
export = ["executorch", "torchao"]
dev = ["ruff>=0.11", "ty>=0.0"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-github-actions-annotate-failures>=0.3",
    "pytest-xdist>=3.8",
    "ruff>=0.11",
    "ty>=0.0",
]
examples = [
    "accelerate>=1.13.0",
    "marimo>=0.23.2",
    "matplotlib>=3.10.9",
    "torchvision>=0.21.0",
    "transformers>=5.6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/torchquant"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Conflicts with ruff formatter
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "ISC001", # single-line-implicit-string-concatenation
    "ISC002", # multi-line-implicit-string-concatenation
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "W191",   # tab-indentation

    # Docstring style conflicts
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)

    # Exception messages
    "EM101",  # Exception must not use a string literal
    "EM102",  # Exception must not use an f-string literal
    "TRY003", # Avoid specifying long messages outside the exception class

    # TODOs
    "FIX002", # Line contains TODO
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO

    # Boolean arguments
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition

    # Naming conventions
    "N812", # Lowercase imported as non-lowercase (ML convention: L, F)
    "N818", # Exception name should be named with an Error suffix

    # Pylint rules
    "PLR0911", # too-many-return-statements
    "PLR2004", # magic-value-comparison

    # Type narrowing
    "S101", # Use of assert

    # Docstrings — not required everywhere
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__

    # Framework callback signatures
    "ARG002", # Unused method argument

    # Manual review
    "ANN401",  # Dynamically typed expressions (typing.Any)
    "PLC0415", # import-outside-top-level
    "PLR0915", # too-many-statements
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation for private function
    "ARG",    # Unused function args - fixtures
    "SLF001", # Private member accessed - tests need internals
    "S101",   # Use of assert - expected in tests
]
"examples/**/*.py" = [
    "ANN001",  # marimo cell args are inferred by the runtime
    "ANN202",  # marimo cell functions carry no return annotation
    "ARG",     # marimo forwards values through cell args even when unused
    "E501",    # demo markdown strings exceed the line limit
    "FBT003",  # `.train(False)` is the idiomatic PyTorch eval toggle
    "INP001",  # examples/ is intentionally not a package
    "N803",    # cell args mirror imported names like ResNet18_Weights
    "PLR1711", # marimo markdown-only cells end with a bare `return`
    "RUF001",  # markdown cells contain Chinese/unicode punctuation
    "T201",    # print aids live demos
]

[tool.pytest.ini_options]
addopts = "-n auto --dist=loadscope"

[tool.ty.src]
exclude = ["examples"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
